[metadata]
name = mpl
description = My Programming Language Toolkit
author = SamimiesGames
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    mpl
install_requires =
    click>=8.0.3
    pytest>=6.2.5
    tox==3.24.3
python_requires = >=3.9.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24.3


[options.package_data]
mpl = py.typed
